# Repository1

./: L pattern CRO.html  kbc_MINI.py  tracker.html
2026-06-24/files-mentioned-by-the-user-build/: index.html  package.json  tailwind.config.js
2026-06-24/files-mentioned-by-the-user-build/src/: App.tsx  index.css  types.ts
2026-06-24/files-mentioned-by-the-user-build/src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
2026-06-24/files-mentioned-by-the-user-build/src-tauri/capabilities/: default.json
2026-06-24/files-mentioned-by-the-user-build/src-tauri/src/: lib.rs  main.rs
2026-06-24/files-mentioned-by-the-user-build/src/components/: SessionDock.tsx
2026-06-24/files-mentioned-by-the-user-build/src/components/layout/: MobileNav.tsx  Sidebar.tsx  Topbar.tsx
2026-06-24/files-mentioned-by-the-user-build/src/components/ui/: MomentumCore.tsx  Primitives.tsx
2026-06-24/files-mentioned-by-the-user-build/src/data/: seed.ts
2026-06-24/files-mentioned-by-the-user-build/src/lib/: database.ts  format.ts  progression.ts
2026-06-24/files-mentioned-by-the-user-build/src/pages/: Analytics.tsx  Dashboard.tsx  FutureBucket.tsx  JourneyLog.tsx  KnowledgeVault.tsx  Roadmaps.tsx  Settings.tsx  TimeVault.tsx
2026-06-24/files-mentioned-by-the-user-build/src/store/: useQuestStore.ts
